--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body{
     display: none;
 }
 
+
+/* Menu de navegacion*/
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -95,6 +98,8 @@ nav{
 }
 
 
+/* Opcion del menu en desktop*/
+
 .desktop-menu{
     position: absolute;
     background: var(--white);
@@ -129,11 +134,16 @@ nav{
 }
 
 
+/* Opcion del menu en mobile */
+
 .mobile-menu{
+    box-sizing: border-box;
+    width: 100%;
     background: var(--white);
     position: absolute;
     top: 61px;
     padding: 24px 24px 0;
+    left: 0;
 }
 .mobile-menu ul{
     list-style: none;
@@ -165,9 +175,80 @@ nav{
     text-decoration: none; 
 }
 
+/* Detalles */
+.product-detail{
+    background: var(--white);
+    width: 360px;
+    position: absolute;
+    top: 61px;
+    right: 0;
+}
 
+.div-close{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    background-color: var(--white);
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-.product-detail {
+.product-detail img:nth-child(2){
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 24px 24px;
+}
+
+.product-detail div img{
+    width: 12px;
+}
+
+.product-detail > .product-info{
+    padding: 24px 24px ;
+}
+
+.product-detail > .product-info p:nth-child(1){
+    font-size: var(--md);
+    font-weight: bold;
+}
+
+.product-detail > .product-info p:nth-child(2){
+    font-size: var(--md);
+    color:var(--very-light-pink);
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.product-detail > .product-info p:nth-child(3){
+    font-weight: bold;
+    font-size: var(--sm);
+    color:var(--very-light-pink);
+}
+
+.primary-button{
+    background-color: var(--hospital-green);
+    color: var(--white);
+    width: 100%;
+    height: 50px;
+    font-size: var(--sm);
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Opcion del carrito */
+
+.cart-info-container {
     background: var(--white);
     width: 360px;
     position: absolute;
@@ -259,6 +340,7 @@ nav{
 }
 
 
+/* Productos del home */
 
 .cards-container{
     margin-top: 20px;
@@ -278,28 +360,30 @@ nav{
     border-radius: 20px;
 }
 
-.product-info{
+.card > .product-info{
     display: flex;
     justify-content: space-between;
     margin-top: 8px;
 }
 
-.product-info div p:nth-child(1){
+.card > .product-info div p:nth-child(1){
     margin-top: 6px;
     font-size: var(--md);
     font-weight: bold;
 }
 
-.product-info div p:nth-child(2){
+.card > .product-info div p:nth-child(2){
     font-size: var(--sm);
     color: var(--very-light-pink);
 }
 
-.product-info figure img{
+.card > .product-info figure img{
     width: 50px;
     height: auto;
     cursor: pointer;
 }
+
+
 
 @media (max-width: 768px) {
     .menu{
@@ -311,7 +395,7 @@ nav{
     .desktop-menu{
         display: none;
     } 
-    .product-detail {
+    .cart-info-container {
         width: 100%;
     }
     .cards-container{
@@ -325,6 +409,9 @@ nav{
     .card img{
         width: 140px;
         height: 140px;
+    }
+    .product-detail{
+        width: 100%;
     }
 }
 @media (min-width: 769px){
